src/test/ui/parser/issues/issue-60075.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `}`
  --> $DIR/issue-60075.rs:6:10
   |
LL |         });
   |          ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: non-item in item list
  --> $DIR/issue-60075.rs:6:11
   |
LL | trait T {
   |         - item list starts here
...
LL |         });
   |           ^ non-item starts here
...
LL |     }
   |     - item list ends here

error: aborting due to 2 previous errors

